# schedule-an-event

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: dockerimage.yml
src/: main.rs
templates/: event.html  schedule.html
website-src/: package-lock.json  package.json
website-src/src/: event.html  event.js  schedule.css  schedule.html  schedule.js
