[package]
name = "schedule-an-event"
version = "0.1.0"
authors = ["SirJosh3917 <SirJosh3917@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"

[dependencies.askama]
version = "0.9.0"
features = ["with-rocket", "mime", "mime_guess"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
